tests/NormalTests/paczka1/fuzzy1/64077802.err
Error in line 15: gRKo91MRcti A621 50,8
Error in line 21: tYsNVYCCjcE A140 35,4
Error in line 32: tYsNVYCCjcE A621 39,6
Error in line 33: gRKo91MRcti A140 63,5
